[tool.poetry]
name = "infoblox-networks-sync"
version = "0.1.0"
description = "Infoblox network sync between grids"
authors = ["Lukasz Lastowski <lukasz@lastowski.com.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
inquirer = "^3.1.3"
infoblox-client = "^0.6.0"
loguru = "^0.6.0"
pydantic = "^1.10.7"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
